opam-version: "2.0"
synopsis: "OCaml-C Game Engine"
description: "OCaml-C Game Engine"
maintainer: ["deakodev@outlook.com"]
authors: ["Zachary Deak"]
license: "Apache-2.0"
homepage: "https://github.com/deakodev/bedbug"
bug-reports: "https://github.com/deakodev/bedbug/issues"
depends: [
  "ocaml" {>= "4.05"}
  "dune" {>= "3.17"}
  "ctypes" {>= "0.14"}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/deakodev/bedbug.git"
available: [arch != "arm32" & arch != "ppc64"]