opam-version: "2.0"
synopsis: "OCaml-C bindings for glfw"
description: "OCaml-C bindings for glfw"
maintainer: ["deakodev@outlook.com"]
authors: ["Zachary Deak"]
license: "MIT"
homepage: "https://github.com/deakodev/surf"
bug-reports: "https://github.com/deakodev/surf/issues"
depends: [
  "dune" {>= "3.17"}
  "ocaml" {>= "4.05"}
  "ctypes" {>= "0.14"}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/deakodev/surf.git"
available: [arch != "arm32" & arch != "ppc64"]